# BMS_zephyr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  Serial_Monitor_AMS.ipynb  battery_web_dashboard.py  can_autoreply.sh  can_listen.sh  nucleo_l432kc.overlay  prj.conf  web_dashboard_final.html
BMS_l432kc/: CMakeCache.txt  CMakeLists.txt  prj.conf
BMS_l432kc/source/: main.c
CAN Scripts/: can_IVT_mock.sh  can_autoreply.sh  can_control.sh  can_precharge_mock.sh
Dashboard/: battery_web_dashboard.py  read_serial.py  web_dashboard_final.html
boards/: nucleo_l432kc.overlay  nucleo_l432kc_old.overlay
build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt
build_test/Kconfig/: Kconfig.dts  Kconfig.modules
build_test/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre
doxygen_output/html/: Battery_8c.html  Battery_8c__incl.map  Battery_8c__incl.md5  Battery_8h.html  Battery_8h__dep__incl.map  Battery_8h__dep__incl.md5  Battery_8h__incl.map  Battery_8h__incl.md5  Battery_8h_source.html  CAN__Bus_8c.html  CAN__Bus_8c__incl.map  CAN__Bus_8c__incl.md5  CAN__Bus_8h.html  CAN__Bus_8h__dep__incl.map  CAN__Bus_8h__dep__incl.md5  CAN__Bus_8h__incl.map  CAN__Bus_8h__incl.md5  CAN__Bus_8h_source.html  SPI__MB_8h.html  SPI__MB_8h__dep__incl.map  SPI__MB_8h__dep__incl.md5  SPI__MB_8h__incl.map  SPI__MB_8h__incl.md5  SPI__MB_8h_source.html  Status__error__flags_8h.html  Status__error__flags_8h__dep__incl.map  Status__error__flags_8h__dep__incl.md5  (+37 more)
include/: Battery.h  Battery_types.h  CAN_Bus.h  SPI_MB.h  Shutdown_circuit.h  Status_error_flags.h  battery.h  can_bus.h  error_handler.h  serial_monitor.h  shutdown_circuit.h  spi_mb.h  status_error_flags.h
source/: main.c
tests/: CMakeLists.txt  UnitTests.c  prj.conf  test_CAN_Bus.c  test_battery.c  test_can_bus.c  test_shutdown_circuit.c  test_spi_mb.c
(+205 files in other folders)
